--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
     <title>Fast Food</title>
 </head>
 <body>
-   
+    <header class="header1">
+        <a href="#">
+            <img src="./images/logo.png" alt="logo" class="logo">
+        </a>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Menu</a>
+            <a href="#">Products</a>
+            <a href="#">Review</a>
+            <a href="#">Contact</a>
+            <a href="#">Blogs</a>
+        </nav>
+        <div class="icon">
+            <button><i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+            <button><i class="fa-solid fa-cart-shopping"></i>
+            </button>
+            <button><i class="fa-solid fa-bars"></i>
+            </button>
+        </div>
+    </header>
 
     
 
