--- a/index.html
+++ b/index.html
@@ -31,6 +31,75 @@
             </button>
         </div>
     </header>
+    <section class="home">
+        <div class="home-container">
+            <h1>CHEF'S PLACE DELİVERY</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum fugiat voluptate voluptates, illo neque nemo architecto nesciunt omnis quam cumque dolor delectus perspiciatis sunt sequi magnam accusantium laudantium veritatis, fugit nihil officia, beatae minima molestiae.</p>
+            <button class="home-button">Order Now</button>
+        </div>
+    </section>
+    <section>
+        <h2 id="baslıkmenu">MENU</h2>
+        <div class="container1">
+            <div class="box">
+                <a href=""><img src="./images/menu-1.png" alt="menu-1"></a>
+                <h3>PIZZA1</h3>
+                <p>$119.99 <span>$129.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/menu-2.png" alt="menu-2"></a>
+                <h2>Hamburger1</h2>
+                <p>$119.99 <span>$129.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/menu-3.png" alt=""></a>
+                <h2>Pizza2</h2>
+                <p>$119.99 <span>$129.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/blog-3.jpg" alt=""></a>
+                <h2>Junior Pizza</h2>
+                <p>$129.99 <span>$149.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+        </div>
+        <div class="container2">
+            <div class="box">
+                <a href=""><img src="./images/blog-2.jpg" alt=""></a>
+                <h2>Big Hamburger</h2>
+                <p>$129.99 <span>$149.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/blog-1.jpg" alt=""></a>
+                <h2>M-size Hamburger</h2>
+                <p>$129.99 <span>$149.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/dark-product.jpg" alt=""></a>
+                <h2>Double Hamburger</h2>
+                <p>$129.99 <span>$149.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+            <div class="box">
+                <a href=""><img src="./images/menu-1.png" alt=""></a>
+                <h2>Chef's Pizza</h2>
+                <p>$169.99 <span>$189.99</span></p>
+                <button class="btn">add to cart</button>
+            </div>
+  
+        </div>
+    </section>
 
     
 
